--- a/static/demo.html
+++ b/static/demo.html
@@ -19,6 +19,7 @@
       iframeHost: iframeHost,
       forceFullPageWidget: false,
       alwaysShowWidget: true,
+      disableGoogleAnalytics: true
     };
   </script>
   <script src="widget.js"></script>
